feat: docker cp http endpoint, single file upload
